--- a/week2/src/app/app.component.html
+++ b/week2/src/app/app.component.html
@@ -1,8 +1,8 @@
 <h1>{{title}}</h1>
 <h2>{{name}}</h2>
 <p>{{TaskSummary()}}</p>
-<p *ngFor=""let item of thingsToDo
-let i="index;
+<p *ngFor="let item of thingsToDo;
+let i=index;
 let rowOne=odd;
 let rowTwo=even;"
 [ngClass]="{odd_row:rowOne, even_row:rowTwo}">({{i}}) {{item}}</p>
